fixed all the responsiveness

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
         <form id="taskForm">
             <input type="hidden" id="editIndex" value="">
             <div class="form-group">
-                <label for="title">Task Title:</label>
+                <label for="title">Task Title</label>
                 <input type="text" name="title" id="title" placeholder="Enter task title" required>
             </div>
             <div class="form-group">
-                <label for="description">Description:</label>
+                <label for="description">Description</label>
                 <textarea name="description" id="description" placeholder="Enter task description" required></textarea>
             </div>
             <div class="form-group">
-                <label for="priority">Priority:</label>
+                <label for="priority">Priority</label>
                 <select name="priority" id="priority" required>
                     <option value="">Select Priority</option>
                     <option value="Less">Less</option>
@@ -29,7 +29,7 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="deadline">Deadline for Task:</label>
+                <label for="deadline">Deadline for Task</label>
                 <input type="date" name="deadline" id="deadline" required>
             </div>
             <button type="submit">Add Task</button>
